--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "immutability-helper": "^2.3.0"
   }
-
 }
