fixed bug King 60 currentMove castling update fail

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -12,7 +12,7 @@
             "type": "node-terminal"
         },
         {
-            "type": "chrome",
+            "type": "msedge",
             "request": "launch",
             "name": "Launch Chrome against localhost",
             "url": "http://localhost:3000",
